refactor: task module and notes module